--- a/your_cabs_data_analysis.ipynb
+++ b/your_cabs_data_analysis.ipynb
@@ -5601,8 +5601,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "934918f6-f0e5-4f9b-8b52-50fef510a73c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ypred = dt.predict(xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "91f2c753-7ec6-4677-a7ec-3f649300484c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.99      0.99       470\n",
+      "           1       0.50      0.43      0.46         7\n",
+      "\n",
+      "    accuracy                           0.99       477\n",
+      "   macro avg       0.75      0.71      0.73       477\n",
+      "weighted avg       0.98      0.99      0.98       477\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(ytest, ypred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d2be911-4bc7-4f7d-a9ea-4cbf3c1c43c6",
+   "metadata": {},
+   "source": [
+    "> As we can see, because of the class imbalance the model is too biased to be productive for prediction. Hence, travel type1 is not fit machine learning\n",
+    "\n",
+    "> Cancellaion data is very less comparing to non-cancellation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "982be438-fd1c-45b1-a44b-5879de3b789b",
    "metadata": {},
    "outputs": [],
    "source": []
